yaml/pod-definition-priority-classes.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx 
    image: nginx
    ports:
      - containerPort: 8080
  priorityClassName: high-priority
