yaml/pod-definition-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-web-app-color
  labels:
    name: simple-web-app-color
spec:
  containers:
  - name: simple-web-app-color
    image: simple-web-app-color
    ports:
      - containerPort: 8080
