yaml/pod-definition-tolerance.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers:
  - name: nginx-container
    image: nginx

  tolerations:
  - key: app
    operator: "Equal"
    value: blue
    effect: "NoSchedule"
