yaml/pod-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: dev #nombre del namespace que deseas

  labels:
    app: nginx
    tier: frontend
spec:
  containers:
    - name: nginx-container
      image: nginx
