yaml/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end

spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80 

  selector:   #buscarlo en pod definition y copiar
    app: myapp
    type: back-end
